# bioplot_rs

./: .gitignore  Cargo.toml  Makefile  README.md  multi_fasta.html  multi_fastq.html  single_fasta.html  single_fastq.html
src/: args.rs  dispatch.rs  errors.rs  main.rs  test.fasta
src/data/: mod.rs  utils.rs
src/data/bam/: bam.rs  mod.rs
src/data/bam/multi/: html.rs  mod.rs  multi.rs  schema.rs
src/data/bam/single/: bam.rs  html.rs  mod.rs  schema.rs  utils.rs
src/data/fasta/: fasta.rs  html.rs  mod.rs  schema.rs
src/data/fasta/multi/: html.rs  multi.rs  schema.rs
src/data/fasta/single/: fasta.rs  html.rs  mod.rs  schema.rs
src/data/fastq/: fastq.rs  html.rs  mod.rs  schema.rs
src/data/fastq/multi/: html.rs  multi.rs  schema.rs
src/data/fastq/single/: html.rs  mod.rs  schema.rs  single.rs
templates/: bam_multi_report.html  bam_single_report.html  fasta_multi_report.html  fasta_report.html  fasta_single_report.html  fastq_multi_report.html  fastq_single_report.html
