[package]
name = "bioplot_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
askama = "0.15.4"
bio_utils_rs = { version = "0.0.2", features = ["io"] }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
needletail = { version = "0.6.3", features = ["compression"]}
noodles = { version = "0.107.0", features = ["bam"], optional=true}
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[features]
bam = ["dep:noodles"]
