[package]
name = "bioplot_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
askama = "0.15.4"
bio_utils_rs = { version = "0.0.2", features = ["io"] }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
noodles = { version = "0.97", features = ["bam", "bgzf", "sam"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0.18"
